--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 
 <head>
-    <title>Tick Tick Boomb</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <title>Tick Tick Bomb</title>
 </head>
 
 <body>
@@ -12,5 +10,7 @@
     <div id="countdown"></div>
     <div id="calendar"></div>
 </body>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 
 </html>
